// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received null."
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_REQUEST/TARGET_DATE/SET 1`] = `
"Snapshot Diff:
- First value
+ Second value

- 
+ 2020-04-21"
`;

exports[`reducer() TIMESHEET-PC/UI/DAILY_REQUEST/TARGET_DATE/UNSET 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected string but received null."
`;
